--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .navcon{
-    background-color: rgb(90, 90, 90);
+    background-color: rgba(0, 0, 0, 0.162);
     width: 100%;
     height: 50px;
     display: flex;
@@ -40,7 +40,7 @@
     display: none;
     color: beige;
     font-size: 20pt;
-    margin: 0 7px;
+    margin: 0 10px;
     text-align: left;
 }
 
@@ -52,8 +52,8 @@
         top: 50px;
         left: 0;
         right: 50%;
-        background: rgb(90, 90, 90);
-        padding: 20px;
+        background: rgba(0, 0, 0, 0.162);
+        padding: 5px;
         text-align: center;
       }
     
